enforce-tls-service/require-tls-service.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireTLSService
metadata:
  name: enforce-tls-on-loadbalancer
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
